--- a/CSS_advanced/styles/7-style.css
+++ b/CSS_advanced/styles/7-style.css
@@ -34,8 +34,8 @@ a {
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
 
-    --font-family-base: "Opens Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
