--- a/CSS_advanced/styles/9-style.css
+++ b/CSS_advanced/styles/9-style.css
@@ -14,21 +14,11 @@ body {
 a {
     color: #161616;
 
-    a:link {
-        text-decoration: none;
-    }
-
-    a:visited {
-        text-decoration: none;
-    }
-
-    a:hover {
-        text-decoration: none;
-    }
-
-    a:active {
-        text-decoration: none;
-    }
+    text-decoration: none;
+    a:link { text-decoration: none; }
+    a:visited { text-decoration: none; }
+    a:hover { text-decoration: none; }
+    a:active { text-decoration: none; }
 }
 
 .visually-hidden {
