--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -55,7 +55,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     font-weight: var(--font-weight-bold);
 }
 
-.containter {
+.container {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
