--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -37,19 +37,20 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
 }
 
 .section {
-    padding-left: var(--section-padding);
+    padding: var(--section-padding)
+    /* padding-left: var(--section-padding);
     padding-right: var(--section-padding);
     padding-top: var(--section-padding);
-    padding-bottom: var(--section-padding);
+    padding-bottom: var(--section-padding); */
 }
 
 .section-header {
     text-align: var(--section-header-align);
     padding: var(--section-header-padding);
-    padding-left: var(--section-header-padding);
+    /* padding-left: var(--section-header-padding);
     padding-right: var(--section-header-padding);
     padding-top: var(--section-header-padding);
-    padding-bottom: var(--section-header-padding);
+    padding-bottom: var(--section-header-padding); */
 }
 
 .section-body {
