--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -38,26 +38,15 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
 
 .section {
     padding: var(--section-padding)
-    /* padding-left: var(--section-padding);
-    padding-right: var(--section-padding);
-    padding-top: var(--section-padding);
-    padding-bottom: var(--section-padding); */
 }
 
 .section-header {
     text-align: var(--section-header-align);
     padding: var(--section-header-padding);
-    /* padding-left: var(--section-header-padding);
-    padding-right: var(--section-header-padding);
-    padding-top: var(--section-header-padding);
-    padding-bottom: var(--section-header-padding); */
 }
 
 .section-body {
-    padding-left: var(--section-body-padding);
-    padding-right: var(--section-body-padding);
-    padding-top: var(--section-body-padding);
-    padding-bottom: var(--section-body-padding);
+    padding: var(--section-body-padding);
     text-align: var(--section-footer-align);
 }
 
@@ -127,8 +116,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
-    padding-left: var(--footer-padding);
-    padding-right: var(--footer-padding);
-    padding-top: var(--footer-padding);
-    padding-bottom: var(--footer-padding);
+    padding: var(--footer-padding);
 }
