--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -47,9 +47,12 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
 
 .section-body {
     padding: var(--section-body-padding);
-    text-align: var(--section-footer-align);
 }
 
+.section-footer {
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
+}
 
 .section-title {
     font-family: var(--font-family-title);
