--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -86,7 +86,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     text-align: center;
 }
 
-.nav-item {
+.nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -95,9 +95,13 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     margin: var(--nav-item-margin);
 }
 
-.nav-link {
+.nav .nav-link {
     display: block;
     padding: .5rem 1rem .5rem 1rem;
+}
+
+.nav-link:hover {
+    color: var(--nav-item-link-hover);
 }
 
 :root {
