changed none to 0

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -110,7 +110,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
 
 ul.row {
     margin: 0;
-    padding: none;
+    padding: 0;
     list-style: none;
 }
 
