--- a/CSS_advanced/styles/21-style.css
+++ b/CSS_advanced/styles/21-style.css
@@ -114,7 +114,7 @@ ul.row {
     list-style: none;
 }
 
-[class^="col-"] {
+[class^="col-"] { /* targets all classes that begin(^) with that string */
     float: left;
     padding: 0.5rem;
 }
