removed > , returned order to original positions, changed color to fill

--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -143,8 +143,8 @@ ul.row {
     display: block;
 }
 
-svg > .social-link {
-    color: var(--text-color);
+.social-link svg {
+    fill: var(--text-color);
 }
 
 :root {
