misread anchor as anchor links

--- a/CSS_advanced/styles/24-style.css
+++ b/CSS_advanced/styles/24-style.css
@@ -40,7 +40,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     margin: 0;
 }
 
-.card-services a:link {
+.card-services a {
     display: block;
     padding: 2rem;
     background-color: var(--color-light-grey);
