--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -170,7 +170,7 @@ ul.row {
     border-style: var(--button-border);
     font-size: var(--button-font-size);
     color: var(--button-color);
-    text-decoration: var(--button-text-decorations);
+    text-decoration: var(--button-text-decoration);
 }
 
 button:hover {
@@ -229,8 +229,8 @@ button:hover {
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
     --button-border: 0.2rem solid var(--color-primary);
-    --button-color: color-black;
-    --button-text-decorations: none;
+    --button-color: var(--color-black);
+    --button-text-decoration: none;
     --button-font-size: var(--font-size-large);
     --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
