--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -167,13 +167,13 @@ ul.row {
 .button {
     display: var(--button-display);
     padding: var(--button-padding);
-    border-style: var(--button-border);
+    border: var(--button-border);
     font-size: var(--button-font-size);
     color: var(--button-color);
     text-decoration: var(--button-text-decoration);
 }
 
-button:hover {
+.button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
