--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -62,7 +62,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     height: 10rem;
 }
 
-.card-testimonial .card-avatar cite {
+.card-testimonial .card-quote cite {
     display: block;
     padding-top: 1rem;
     color: var(--color-primary);
