--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -15,7 +15,7 @@ html {
 }
 
 .header-logo {
-    position: var(--header-padding);
+    position: var(--header-logo-position);
 }
 
 .header-logo:link {
