--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -164,7 +164,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
 
 .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
-    width: 1rem;
+    width: 100%;
 }
 
 .nav .nav-link {
