--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -100,7 +100,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     z-index: 1;
 }
 
-.card-inner:hover {
+.card-work .card-inner:hover {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -112,7 +112,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     position: relative;
 }
 
-.card-work .card-title {
+.card-work .card-title a {
     display: block;
     text-decoration: none;
     padding-top: 45%;
