--- a/CSS_advanced/styles/31-style.css
+++ b/CSS_advanced/styles/31-style.css
@@ -81,7 +81,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
 }
 
 .card-testimonial .card-quote::before {
-    content: \201C;
+    content: "\201C";
     position: absolute;
     top: -4.5rem; left: -1rem; 
     color: #efeded;
