--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -111,7 +111,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
     position: absolute;
     top: -0.1rem; left: -0.1rem; right: -0.1rem;
     z-index: 1;
-    transition: var(–-transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-inner {
@@ -144,7 +144,7 @@ a:active { text-decoration: none; background-color: var(--color-light-grey);}
 
 .card-work:hover .card-image {
     transform: scale(1.2);
-    transition: var(–-transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-outer {
